webhosting-operator/config/profiling/parca_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: parca-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
  labels:
    app.kubernetes.io/component: observability
    app.kubernetes.io/instance: parca
    app.kubernetes.io/name: parca
  name: parca
  namespace: parca
spec:
  ingressClassName: nginx
  rules:
  - host: parca.webhosting.timebertt.dev
    http:
      paths:
      - backend:
          service:
            name: parca
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - parca.webhosting.timebertt.dev
    secretName: parca-tls
